Dali: Room Name support
Room name support is added by 8 bytes of room name in dali variables.
On update, room name is also saved in flash.

Room name have a default value.

Room name is saved in same way as Device Name.

Signed-off-by: Ajay <ajay@moxiedevices.com>

--- a/configs/circuit_breaker.config
+++ b/configs/circuit_breaker.config
@@ -1,1 +1,3 @@
 #define HOME_AUTOMATION_DEVICE_ID	0x20
+#define SLAVE_NAME	'C','K','T','B', 'R', 'E','A', 'K'
+#define ROOM_NAME	'_','_','N','O', 'R', 'O','O', 'M'
