--- a/configs/led_light.config
+++ b/configs/led_light.config
@@ -1,3 +1,4 @@
 #define HOME_AUTOMATION_DEVICE_ID	0x10
-#define LED_LIGHT	'L','E','D','L', 'I', 'G','H', 'T',
+#define SLAVE_NAME	'L','E','D','L', 'I', 'G','H', 'T'
+#define ROOM_NAME	'_','_','N','O', 'R', 'O','O', 'M'
 
