config parameters for Dali, UART and downstream tx rx fn
Signed-off-by: Ajay <ajay@moxiedevices.com>

--- a/configs/master.config
+++ b/configs/master.config
@@ -1,4 +1,4 @@
-#define CONFIG_UART0
+//#define CONFIG_UART0
 #define CONFIG_UART1
-//#define DALI_PIN_31_30 //P10 P11
-#define DALI_PIN_23_22 // P205 P206
+#define DALI_PIN_31_30 //P10 P11
+//#define DALI_PIN_23_22 // P205 P206
